# gjk_with_web

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  gjk.cpp  gjk.hpp  handlers.hpp  main.cpp
web/: index.html
